chromedriver and geckodriver installed

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chromedriver": "^96.0.0",
+    "geckodriver": "^3.0.1",
     "nightwatch": "^1.7.13"
   }
 }
